# server/swagger.yaml
@@ -10,6 +10,8 @@ servers:
 tags:
   - name: User
     description: User management
+  - name: Tag
+    description: Tag management
 
 paths:
   /user:
@@ -50,9 +52,9 @@ paths:
                   type: string
                   description: User's password
       responses:
-        "201":
+        '201':
           description: User created
-        "400":
+        '400':
           description: Invalid input
 
   /user/citizenId-status/{citizenId}:
@@ -69,11 +71,11 @@ paths:
           schema:
             type: string
       responses:
-        "200":
+        '200':
           description: Citizen id available
-        "400":
+        '400':
           description: Citizen ID is not valid
-        "409":
+        '409':
           description: Citizen id already exists
 
   /user/login:
@@ -96,9 +98,79 @@ paths:
                   type: string
                   description: User's password
       responses:
-        "200":
+        '200':
           description: User logged in
-        "400":
+        '400':
           description: User not found
-        "403":
+        '403':
           description: Wrong Password
+
+  /tag/create:
+    post:
+      tags:
+        - Tag
+      summary: Create a new tag
+      operationId: createTag
+      requestBody:
+        description: Tag object that needs to be added
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                name:
+                  type: string
+                  description: Tag's name
+      responses:
+        '201':
+          description: Tag created
+        '500':
+          description: Tag creation failed
+
+  /tag/get-all:
+    get:
+      tags:
+        - Tag
+      summary: Get all tags
+      operationId: getTags
+      responses:
+        '200':
+          description: Tags retrieved
+        '500':
+          description: Tags retrieval failed
+  /tag/name/{name}:
+    get:
+      tags:
+        - Tag
+      summary: Get tag by name
+      operationId: getTagByName
+      parameters:
+        - name: name
+          in: path
+          description: Tag's name
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Tag retrieved
+        '500':
+          description: Tag retrieval failed
+  /tag/id/{id}:
+    get:
+      tags:
+        - Tag
+      summary: Get tag by id
+      operationId: getTagById
+      parameters:
+        - name: id
+          in: path
+          description: Tag's id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Tag retrieved
+        '500':
+          description: Tag retrieval failed
